# wordplex-python

./: Makefile  README.md  changelog.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  deploy.yaml  python-package.yml  release.yaml
tests/: wordplex_test.py
wordplex/: __init__.py  __main__.py  wordplex.py
wordplex/newsfragments/: .gitkeep
