[project]
name = "wordplex"
version = "0.2.6"
description = "WordPlex"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff",
    "pre-commit==3.3.3",
    "pywatchman==1.4.1",
    "towncrier==23.6.0",
    "pytest==7.4.3"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.towncrier]
package = "wordplex"
filename = "changelog.md"
title_format = "## wordplex {version} ({project_date})"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/fordnox/wordplex-python/pulls/{issue})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "improvement"
  name = "Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "fix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = false
